# FIL

./: ARCHITECTURE.md  OPENCODE.md  PLAN_DE_TRABAJO.md  QUICKSTART.md  README.md  ROADMAP_SECURITY.md  SPEC.md  pyproject.toml
fil/: __init__.py  __main__.py
fil/application/services/: __init__.py  audio_meter_runtime.py  clipboard_service.py  dictate_service.py  listen_service.py  meeting_service.py  runtime.py  talk_service.py
fil/application/use_cases/: __init__.py
fil/cli/: __init__.py  main.py
fil/cli/commands/: __init__.py  dictate.py  do.py  listen.py  sessions.py  status.py  talk.py  watch.py
fil/domain/: __init__.py
fil/domain/models/: __init__.py  audio.py  session.py
fil/infrastructure/: __init__.py
fil/infrastructure/agents/: opencode_runner.py
fil/infrastructure/audio/: __init__.py  ffmpeg_segments.py  live_meter.py  meeting_recorder.py  pulse_sources.py  pw_record.py
fil/infrastructure/storage/: __init__.py  session_store.py
fil/infrastructure/transcription/: __init__.py  faster_whisper.py
fil/shared/: __init__.py  audio.py  console.py  meter.py  paths.py  process.py  session_view.py  terminal.py
