[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fil"
version = "0.1.0"
description = "CLI local-first para reuniones, dictado y agentes"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "faster-whisper>=1.1,<2.0",
]

[project.scripts]
fil = "fil.cli.main:run"

[tool.setuptools]
packages = [
  "fil",
  "fil.cli",
  "fil.cli.commands",
  "fil.application",
  "fil.application.services",
  "fil.application.use_cases",
  "fil.domain",
  "fil.domain.models",
  "fil.infrastructure",
  "fil.infrastructure.audio",
  "fil.infrastructure.agents",
  "fil.infrastructure.transcription",
  "fil.infrastructure.storage",
  "fil.shared",
]
